# DAT

./: CMakeLists.txt  README.md  main.cpp
cmake/: FindGUROBI.cmake
config/: albert.cfg  bert.cfg  blenderbot.cfg  deberta.cfg  gpt.cfg  llama.cfg  xlm.cfg
src/: defines.h  dim.h  dse.h  operator-chain.h  operator-tree.h  options.h  tensor-operator.h  tensor.h  to-gurobi.h  util.h
test/: 4d-tensor.cpp  CMakeLists.txt  bgemm-chain.cpp  dse.cpp  fused-io.cpp  fused.cpp  gemm-chain.cpp  gurobi.cpp  indicator.cpp  no-fused.cpp
